--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "./node_modules/.bin/eslint ."
   },
   "dependencies": {
+    "amp-is-empty": "^1.0.2",
     "flat-file-db": "^0.1.4",
     "googlemaps": "^0.1.20",
     "traceur": "0.0.85",
