--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^0.15.1",
-    "mocha": "^2.1.0",
+    "mocha": "2.1.0",
     "should": "^5.0.1",
     "should-promised": "^0.1.0"
   }
