chore(release): remove dry-run from release helper

--- a/.release.json
+++ b/.release.json
@@ -1,6 +1,6 @@
 {
   "non-interactive": true,
-  "dry-run": true,
+  "dry-run": false,
   "verbose": true,
   "force": false,
   "pkgFiles": ["package.json"],
