--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-geobatch",
+  "name": "geobatch",
   "description": "Batch geocode addresses from multiple sources.",
   "version": "1.0.0",
   "author": {
