chore(eslint): allow new aslant features

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,9 +10,12 @@
     "arrowFunctions": true,
     "binaryLiterals": true,
     "blockBindings": true,
+    "classes": true,
     "defaultParams": true,
+    "destructuring": true,
     "forOf": true,
     "generators": true,
+    "modules": true,
     "objectLiteralComputedProperties": true,
     "objectLiteralDuplicateProperties": true,
     "objectLiteralShorthandMethods": true,
@@ -20,6 +23,7 @@
     "octalLiterals": true,
     "regexUFlag": true,
     "regexYFlag": true,
+    "spread": true,
     "superInFunctions": true,
     "templateStrings": true,
     "unicodeCodePointEscapes": true,
