--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src --out-dir dist",
     "prepublish": "npm run lint && npm run build",
     "pretest": "npm run lint",
-    "test": "babel-node _mocha test",
+    "test": "mocha --compilers js:babel-core/register",
     "generatechangelog": "conventional-changelog-generator",
     "commitchangelog": "git add CHANGELOG.md && git commit -m \"chore(changelog): new version\" && git push origin master",
     "changelog": "npm run generatechangelog && git reset package.json && npm run commitchangelog && git add package.json",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "babel": "^4.7.5",
+    "babel-core": "^5.6.15",
     "conventional-changelog-generator": "0.0.3",
     "eslint": "^0.15.1",
     "mocha": "2.1.0",
