--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "2.1.0",
     "release-it": "0.0.15",
     "should": "^5.0.1",
-    "should-promised": "^0.1.0"
+    "should-promised": "^0.1.0",
+    "sinon": "^1.17.1"
   }
 }
