--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^5.8.25",
     "conventional-changelog-generator": "0.0.3",
     "eslint": "^1.6.0",
+    "into-stream": "^2.0.0",
     "mocha": "2.1.0",
     "release-it": "0.0.15",
     "should": "^5.0.1",
