--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "babel src --out-dir dist",
     "prepublish": "npm run lint && npm run build",
-    "xxxpretest": "npm run lint",
+    "pretest": "npm run lint",
     "test": "mocha --compilers js:babel-core/register",
     "generatechangelog": "conventional-changelog-generator",
     "commitchangelog": "git add CHANGELOG.md && git commit -m \"chore(changelog): new version\" && git push origin master",
