--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "email": "katzki@ubilabs.net",
     "url": "http://ubilabs.net/"
   },
+  "contributors": [
+    {
+      "name": "Patrick Mast",
+      "email": "mast@ubilabs.net",
+      "url": "http://ubilabs.net/"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ubilabs/node-geobatch"
