feat(geocoder): implement parallel processing to leverage full QPS
Google API request rates are measured in a bucket model.
Each second, up to 50 requests are allowed (as of June 2016).
The interval at which the requests arrive within a bucket are irrelevant.
This commit implements parallel processing for geocoding requests.
It also optimises the rate limitation code to make best use of the allowed QPS.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "amp-is-empty": "^1.0.2",
+    "cyclist": "^1.0.1",
     "flat-file-db": "^0.1.4",
     "googlemaps": "^1.6.0",
     "into-stream": "^2.0.0"
