chore(eslintrc): allow new.target

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "forOf": true,
     "generators": true,
     "modules": true,
+    "newTarget": true,
     "objectLiteralComputedProperties": true,
     "objectLiteralDuplicateProperties": true,
     "objectLiteralShorthandMethods": true,
