chore(package): update contributors

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
       "name": "Patrick Mast",
       "email": "mast@ubilabs.net",
       "url": "http://ubilabs.net/"
+    },
+    {
+      "name": "Keno Schwalb",
+      "email": "schwalb@ubilabs.net",
+      "url": "https://www.ubilabs.net/"
     }
   ],
   "repository": {
