--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,15 @@
   "env": {
     "browser": true,
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "es6": true
   },
   "globals": {
     "google": true,
     "cartodb": true
+  },
+  "parserOptions": {
+    "sourceType": "module"
   },
   "ecmaFeatures": {
     "arrowFunctions": true,
@@ -76,7 +80,6 @@
     "no-caller": 2,
     "no-div-regex": 1,
     "no-else-return": 2,
-    "no-empty-label": 2,
     "no-eq-null": 2,
     "no-eval": 2,
     "no-extend-native": 2,
@@ -194,11 +197,9 @@
     }],
     "sort-vars": 0,
     "space-before-function-paren": [2, "never"],
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
     "space-unary-ops": [2, {
       "words": true,
       "nonwords": false
@@ -213,7 +214,7 @@
       "before": true,
       "after": false
     }],
-
+    "keyword-spacing": 2,
     "max-depth": [1, 3],
     "max-len": [2, 80, 2],
     "max-params": [2, 4],
