chore(package): update release-it package
The release-it package is outdated, and the currently deployed version will break with node v7.
This commit updates release-it to a newer version

--- a/.release.json
+++ b/.release.json
@@ -9,8 +9,9 @@
   "tagName": "%s",
   "tagAnnotation": "Release %s",
   "buildCommand": "npm run changelog",
-  "distRepo": false,
-  "private": false,
-  "publish": true,
-  "publishPath": "."
+  "npm": {
+    "private": false,
+    "publish": true,
+    "publishPath": "."
+  }
 }
